# bubbleshot

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  GEMINI.md  index.html  install.sh  mkdocs.yml  requirements.txt  robots.txt  sitemap.xml  tags.json
.github/workflows/: docs.yml  release.yml
assets/: bubbleshot.desktop
deployment/: index.html
development/: index.html
docs/: deployment.md  development.md  index.md  installation.md  robots.txt  tags.md  troubleshooting.md  usage.md
installation/: index.html
overrides/: main.html
search/: search_index.json
src/: capture.rs  main.rs
src/ui/: app.rs  mod.rs  painter.rs  renderer.rs  types.rs  utils.rs
src/ui/renderer/: mod.rs  shapes.rs
tags/: index.html
troubleshooting/: index.html
usage/: index.html
