[package]
name = "bubbleshot"
version = "0.3.0"
authors = ["Alteon <alteonalves@gmail.com>"]
description = "A simple screen capture and annotation tool for Linux"
license = "MIT"
edition = "2024"

[package.metadata.deb]
maintainer = "Alteon <alteonalves@gmail.com>"
copyright = "2026, Alteon"
depends = "libgtk-3-0, libdbus-1-3, libpipewire-0.3-0"
section = "utility"
priority = "optional"
icon-path = "assets/icon.png"
assets = [
    ["target/release/bubbleshot", "usr/bin/bubbleshot", "755"],
    ["assets/bubbleshot.desktop", "usr/share/applications/bubbleshot.desktop", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/512x512/apps/bubbleshot.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bubbleshot", dest = "/usr/bin/bubbleshot", mode = "755" },
    { source = "assets/bubbleshot.desktop", dest = "/usr/share/applications/bubbleshot.desktop", mode = "644" },
    { source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/bubbleshot.png", mode = "644" },
]

[dependencies]
ashpd = { version = "0.13.10", features = ["screenshot"] }
image = "0.25.10"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
eframe = "0.30.0"
egui-phosphor = "0.8.0"
arboard = "3.4.1"
rfd = "0.15.2"
tiny-skia = "0.11"
ab_glyph = "0.2.32"
url = "2.5.8"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization.
panic = 'abort'     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

